# tlt

./: .gitignore  MIGRATION_SUMMARY.md  MULTI_USER_SETUP.md  README.md  plan.md
.github/workflows/: ci.yml
architecture/: README.md  spec.md  tickets.md
architecture/adr/: ADR-001-postgres-source-of-truth.md  ADR-002-rust-time-api-authority.md  ADR-003-single-user-auth-and-pats.md  ADR-004-single-global-active-timer.md  ADR-005-card-completion-auto-stop.md  ADR-006-hybrid-label-category-mapping.md  ADR-007-cli-offline-cache-and-sync.md  ADR-008-optimistic-gui-and-sse.md
time-logger/: .env  .env.example  .gitignore  CATEGORY_FEATURES.md  Cargo.toml  GOAL.md  MEMORY.md  README.md  TODO.md
time-logger/src/: cli.rs  lib.rs  main.rs  models.rs  service.rs  storage.rs
trello-like/: .env.example  .gitignore  COLOR_PALETTE.md  README.md  drizzle.config.ts  eslint.config.mjs  jest.config.js  package-lock.json  package.json  plan.md  proxy.ts  stryker.conf.json
trello-like/app/: layout.tsx  page.tsx
trello-like/db/: index.ts  schema.ts
trello-like/docs/: IMPLEMENTATION_SUMMARY.md  README.md
trello-like/drizzle/: 0000_acoustic_ego.sql
trello-like/lib/: board-backgrounds.ts  complexity-example.ts.bak  date-utils.ts  highlight-colors.ts  labels.ts  large-file-example.ts  math-utils.ts  session.ts  timer-context.tsx  types.ts
trello-like/scripts/: analyze_mutation.js  analyze_mutation_full.sh  auto_fix_mutation.sh  check_complexity.sh  check_coverage.sh  check_file_size.sh  generate_tests_from_mutation.js  mutation_report.md  run_all_quality_checks.sh  (+2 more)
(+91 files in other folders)
